--- a/ForeScore.Data/ForeScore.Data.csproj
+++ b/ForeScore.Data/ForeScore.Data.csproj
@@ -59,6 +59,15 @@
     <Compile Include="Hole.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Like.cs" />
+    <Compile Include="Migrations\202110211839126_InitialCreate.cs" />
+    <Compile Include="Migrations\202110211839126_InitialCreate.Designer.cs">
+      <DependentUpon>202110211839126_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110211841121_InitialMigration.cs" />
+    <Compile Include="Migrations\202110211841121_InitialMigration.Designer.cs">
+      <DependentUpon>202110211841121_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Round.cs" />
@@ -74,6 +83,14 @@
       <Project>{7E1EADF4-E576-4291-8DB3-326144AC15F2}</Project>
       <Name>ForeScore.Contracts</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202110211839126_InitialCreate.resx">
+      <DependentUpon>202110211839126_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110211841121_InitialMigration.resx">
+      <DependentUpon>202110211841121_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
