--- a/ForeScore.Data/ForeScore.Data.csproj
+++ b/ForeScore.Data/ForeScore.Data.csproj
@@ -79,12 +79,15 @@
     <Compile Include="Migrations\202110220125354_changedAveragePuttsToFloat.Designer.cs">
       <DependentUpon>202110220125354_changedAveragePuttsToFloat.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110231429049_MovedUserCareerToApplicationUserClass.cs" />
+    <Compile Include="Migrations\202110231429049_MovedUserCareerToApplicationUserClass.Designer.cs">
+      <DependentUpon>202110231429049_MovedUserCareerToApplicationUserClass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Round.cs" />
     <Compile Include="TeeTime.cs" />
-    <Compile Include="UserCareer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -111,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110220125354_changedAveragePuttsToFloat.resx">
       <DependentUpon>202110220125354_changedAveragePuttsToFloat.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110231429049_MovedUserCareerToApplicationUserClass.resx">
+      <DependentUpon>202110231429049_MovedUserCareerToApplicationUserClass.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
