--- a/ForeScore.Models/ForeScore.Models.csproj
+++ b/ForeScore.Models/ForeScore.Models.csproj
@@ -59,7 +59,7 @@
     <Compile Include="CourseModels\CourseEdit.cs" />
     <Compile Include="CourseModels\CourseListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoundModels\CreateRoundModel.cs" />
+    <Compile Include="RoundModels\RoundCreateModel.cs" />
     <Compile Include="RoundModels\RoundDetail.cs" />
     <Compile Include="RoundModels\RoundEdit.cs" />
     <Compile Include="RoundModels\RoundListItem.cs" />
