--- a/ForeScore.Models/ForeScore.Models.csproj
+++ b/ForeScore.Models/ForeScore.Models.csproj
@@ -58,6 +58,9 @@
     <Compile Include="CourseModels\CourseDetail.cs" />
     <Compile Include="CourseModels\CourseEdit.cs" />
     <Compile Include="CourseModels\CourseListItem.cs" />
+    <Compile Include="HoleModels\HoleCreate.cs" />
+    <Compile Include="HoleModels\HoleDetail.cs" />
+    <Compile Include="HoleModels\HoleEdit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoundModels\RoundCreateModel.cs" />
     <Compile Include="RoundModels\RoundDetail.cs" />
