--- a/ForeScore.Data/ForeScore.Data.csproj
+++ b/ForeScore.Data/ForeScore.Data.csproj
@@ -92,6 +92,10 @@
     <Compile Include="Migrations\202110231727543_GuidForRound.Designer.cs">
       <DependentUpon>202110231727543_GuidForRound.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110231750294_TeeTimeEntity.cs" />
+    <Compile Include="Migrations\202110231750294_TeeTimeEntity.Designer.cs">
+      <DependentUpon>202110231750294_TeeTimeEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -132,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110231727543_GuidForRound.resx">
       <DependentUpon>202110231727543_GuidForRound.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110231750294_TeeTimeEntity.resx">
+      <DependentUpon>202110231750294_TeeTimeEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
