--- a/ForeScore.Models/ForeScore.Models.csproj
+++ b/ForeScore.Models/ForeScore.Models.csproj
@@ -68,6 +68,8 @@
     <Compile Include="HoleModels\HoleCreate.cs" />
     <Compile Include="HoleModels\HoleDetail.cs" />
     <Compile Include="HoleModels\HoleEdit.cs" />
+    <Compile Include="LikeModels\LikeCreate.cs" />
+    <Compile Include="LikeModels\LikeEdit.cs" />
     <Compile Include="PostModels\PostCreate.cs" />
     <Compile Include="PostModels\PostDetail.cs" />
     <Compile Include="PostModels\PostEdit.cs" />
@@ -81,7 +83,10 @@
     <Compile Include="TeeTimeModels\TeeTimeDetail.cs" />
     <Compile Include="TeeTimeModels\TeeTimeEdit.cs" />
     <Compile Include="TeeTimeModels\TeeTimeListItem.cs" />
+    <Compile Include="UserCareerModels\UserCareersFollowingListItem.cs" />
     <Compile Include="UserCareerModels\UserCareerViewModel.cs" />
+    <Compile Include="UserCareerModels\UserNameCreate.cs" />
+    <Compile Include="UserCareerModels\UsernameEdit.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
