--- a/ForeScore.Data/ForeScore.Data.csproj
+++ b/ForeScore.Data/ForeScore.Data.csproj
@@ -56,6 +56,8 @@
   <ItemGroup>
     <Compile Include="Comment.cs" />
     <Compile Include="Course.cs" />
+    <Compile Include="FollowedBy.cs" />
+    <Compile Include="Following.cs" />
     <Compile Include="Hole.cs" />
     <Compile Include="HoleData.cs" />
     <Compile Include="IdentityModels.cs" />
@@ -67,6 +69,10 @@
     <Compile Include="Migrations\202110251928079_IsFeaturedProperty.cs" />
     <Compile Include="Migrations\202110251928079_IsFeaturedProperty.Designer.cs">
       <DependentUpon>202110251928079_IsFeaturedProperty.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110252109110_FollowDataEntities.cs" />
+    <Compile Include="Migrations\202110252109110_FollowDataEntities.Designer.cs">
+      <DependentUpon>202110252109110_FollowDataEntities.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Post.cs" />
@@ -90,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110251928079_IsFeaturedProperty.resx">
       <DependentUpon>202110251928079_IsFeaturedProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110252109110_FollowDataEntities.resx">
+      <DependentUpon>202110252109110_FollowDataEntities.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
