--- a/ForeScore.Data/ForeScore.Data.csproj
+++ b/ForeScore.Data/ForeScore.Data.csproj
@@ -74,6 +74,10 @@
     <Compile Include="Migrations\202110252109110_FollowDataEntities.Designer.cs">
       <DependentUpon>202110252109110_FollowDataEntities.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110252147261_AddedFullNameToFollowingEntities.cs" />
+    <Compile Include="Migrations\202110252147261_AddedFullNameToFollowingEntities.Designer.cs">
+      <DependentUpon>202110252147261_AddedFullNameToFollowingEntities.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -99,6 +103,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110252109110_FollowDataEntities.resx">
       <DependentUpon>202110252109110_FollowDataEntities.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110252147261_AddedFullNameToFollowingEntities.resx">
+      <DependentUpon>202110252147261_AddedFullNameToFollowingEntities.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
