--- a/ForeScore.Services/ForeScore.Services.csproj
+++ b/ForeScore.Services/ForeScore.Services.csproj
@@ -57,6 +57,7 @@
     <Compile Include="FollowerServices.cs" />
     <Compile Include="FollowingServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoundServices.cs" />
     <Compile Include="UserCareerServices.cs" />
   </ItemGroup>
   <ItemGroup>
