course services methods

--- a/ForeScore.Data/ForeScore.Data.csproj
+++ b/ForeScore.Data/ForeScore.Data.csproj
@@ -82,6 +82,10 @@
     <Compile Include="Migrations\202110260014475_DataLayerEdits.Designer.cs">
       <DependentUpon>202110260014475_DataLayerEdits.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110261339346_OwnerIdToCourseEntity.cs" />
+    <Compile Include="Migrations\202110261339346_OwnerIdToCourseEntity.Designer.cs">
+      <DependentUpon>202110261339346_OwnerIdToCourseEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -113,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110260014475_DataLayerEdits.resx">
       <DependentUpon>202110260014475_DataLayerEdits.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110261339346_OwnerIdToCourseEntity.resx">
+      <DependentUpon>202110261339346_OwnerIdToCourseEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
