--- a/ForeScore.Services/ForeScore.Services.csproj
+++ b/ForeScore.Services/ForeScore.Services.csproj
@@ -57,6 +57,7 @@
     <Compile Include="CourseServices.cs" />
     <Compile Include="FollowerServices.cs" />
     <Compile Include="FollowingServices.cs" />
+    <Compile Include="HoleDataServices.cs" />
     <Compile Include="HoleServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoundServices.cs" />
