--- a/ForeScore.Models/ForeScore.Models.csproj
+++ b/ForeScore.Models/ForeScore.Models.csproj
@@ -76,6 +76,7 @@
     <Compile Include="HoleModels\HoleEdit.cs" />
     <Compile Include="LikeModels\LikeCreate.cs" />
     <Compile Include="LikeModels\LikeEdit.cs" />
+    <Compile Include="LikeModels\LikeListItem.cs" />
     <Compile Include="PostModels\PostCreate.cs" />
     <Compile Include="PostModels\PostDetail.cs" />
     <Compile Include="PostModels\PostEdit.cs" />
