--- a/ForeScore.Services/ForeScore.Services.csproj
+++ b/ForeScore.Services/ForeScore.Services.csproj
@@ -60,6 +60,7 @@
     <Compile Include="FollowingServices.cs" />
     <Compile Include="HoleDataServices.cs" />
     <Compile Include="HoleServices.cs" />
+    <Compile Include="LikeServices.cs" />
     <Compile Include="PostServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoundServices.cs" />
