--- a/ForeScore.Models/ForeScore.Models.csproj
+++ b/ForeScore.Models/ForeScore.Models.csproj
@@ -92,6 +92,7 @@
     <Compile Include="TeeTimeModels\TeeTimeListItem.cs" />
     <Compile Include="UserCareerModels\UserCareerViewModel.cs" />
     <Compile Include="ViewModels\CourseAndHoleCreate.cs" />
+    <Compile Include="ViewModels\HoleCreateViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
